[gd_scene load_steps=7 format=2]

[ext_resource path="res://gfx/images/player_phone.png" type="Texture" id=1]
[ext_resource path="res://Chat.gd" type="Script" id=2]
[ext_resource path="res://gfx/portraits/icon_hanna.png" type="Texture" id=3]
[ext_resource path="res://gfx/fonts/ui.tres" type="DynamicFont" id=4]
[ext_resource path="res://gfx/fonts/Chat.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 5 )
Label/fonts/font = ExtResource( 5 )

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatTextRect" type="TextureRect" parent="."]
margin_right = 160.0
margin_bottom = 240.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelContainer" type="HBoxContainer" parent="ChatTextRect"]
margin_left = 10.0
margin_top = 8.0
margin_right = 350.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="ChatTextRect/LevelContainer"]
margin_top = 7.0
margin_right = 318.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.882353, 0.556863, 0.556863, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Project Meeting 1"

[node name="CharacterMessageContainer" type="Control" parent="ChatTextRect"]
margin_left = 9.0
margin_top = 72.0
margin_right = 350.0
margin_bottom = 472.0
rect_clip_content = true
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ChatTextRect/CharacterMessageContainer"]
margin_right = 340.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ChatTextRect/CharacterMessageContainer/VBoxContainer"]
margin_right = 340.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "TESTTETES"

[node name="Label3" type="Label" parent="ChatTextRect/CharacterMessageContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 340.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 5 )
text = "TESTTETES"

[node name="Control" type="Control" parent="ChatTextRect/CharacterMessageContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 340.0
margin_bottom = 54.0

[node name="HSplitContainer" type="HSplitContainer" parent="ChatTextRect/CharacterMessageContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 340.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="ChatTextRect/CharacterMessageContainer/VBoxContainer/HSplitContainer"]
margin_top = 52.0
margin_right = 84.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 5 )
text = "TESTTETES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ChatTextRect/CharacterMessageContainer/VBoxContainer/HSplitContainer"]
margin_left = 96.0
margin_right = 340.0
margin_bottom = 128.0
texture = ExtResource( 3 )
